src/pages/NotFoundPage/NotFoundPage.scss
@use "../../styles/partials/breakpoints.scss" as *;
@use "../../styles//partials/colors.scss" as *;
@use "../../styles/partials/global" as *;
@use "../../styles/partials/mixins" as *;
@use "../../styles/partials/typography" as *;

.not-found {

    &__content-container {
        margin: 0 auto;
        padding-top: 8rem;
        width: 60%;

        @include desktop {
            margin: 0 auto;
            padding-top: 10rem;
            width: 50%;
            align-self: center;
        }
    }

    &__content {
        padding: 2rem 0;
        @include content-box-styling;
        display: flex;
        flex-direction: column;
        align-items: center;

        @include desktop {
            margin: 0 1rem;
            padding: 2rem 1rem;
        }
    }

    &__title {
        @include mh1;
        text-transform: uppercase;

        @include desktop {
            @include h1;
        }
    }

    &__subtitle {
        padding-bottom: 1rem;
        @include mh2;
        text-align: center;

        @include desktop {
            @include h2;
        }
    }

    &__animation {
        width: 40px;
        aspect-ratio: 1;
        animation: 
        l2-1 2s infinite linear,
        l2-2 1s infinite steps(1) alternate;
        @include desktop {
        
        }
    }
}

@keyframes l2-1 {
    0%   {transform: perspective(150px) rotateX(  0deg)}
    100% {transform: perspective(150px) rotateX(360deg)}
}
@keyframes l2-2 {
    0% {background: $primary-yellow}
    50% {background: $accent-raspberry}
}

